...
            <objects>
                <viewController storyboardIdentifier="mainViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="YouTubeTopTen" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="HqB-Cm-ifa">
                                <rect key="frame" x="0.0" y="20" width="375" height="56"/>
                                <color key="barTintColor" red="0.87244210030000002" green="0.77413546590000004" blue="0.2413103905" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                                <scopeButtonTitles>
                                    <string>Title</string>
                                    <string>Title</string>
...
                            </activityIndicatorView>
                            <tabBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jtu-yO-flF">
                                <rect key="frame" x="0.0" y="618" width="375" height="49"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <items>
                                    <tabBarItem title="Any Video" image="anyIcon" id="YBg-AZ-SLI"/>
                                    <tabBarItem title="Movie" image="movieIcon" id="1dA-TG-mM6"/>
                                    <tabBarItem title="Show" image="tvIcon" id="A43-AK-JjC"/>
                                </items>
                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <color key="barTintColor" red="0.87244210030000002" green="0.77413546590000004" blue="0.2413103905" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <color key="selectedImageTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="VYA-qD-5Ov"/>
...
